# AI-Master-Degree

./: .gitignore  README.md
SEMESTER-II/: .gitignore
SEMESTER-II/ai-ethics-legal-rag/: .env.example  .gitignore  DEMO-SENARYOSU.md  LICENSE  README.md  design-tokens.md  docker-compose.yml  start.bat  start.sh
SEMESTER-II/ai-ethics-legal-rag/backend/: Dockerfile  README-HuggingFace.md  README.md  demo.ipynb  pyproject.toml  requirements.txt
SEMESTER-II/ai-ethics-legal-rag/backend/app/: __init__.py  config.py  main.py
SEMESTER-II/ai-ethics-legal-rag/backend/app/api/: __init__.py  evaluate.py  rules.py  sources.py  use_cases.py
SEMESTER-II/ai-ethics-legal-rag/backend/app/knowledge/: __init__.py  ingest.py
SEMESTER-II/ai-ethics-legal-rag/backend/app/knowledge/documents/: ab-yz-yasasi.md  etik-kavramlar-saglik.md  fda-aiml-samd.md  iso-iec-42001.md  italya-yz-yasasi.md  kvkk-saglik-yz.md  unesco-yz-etigi.md  who-saglik-yz-etigi.md
SEMESTER-II/ai-ethics-legal-rag/backend/app/llm/: __init__.py  base.py  claude_provider.py  factory.py  groq_provider.py  ollama_provider.py
SEMESTER-II/ai-ethics-legal-rag/backend/app/models/: __init__.py  schemas.py
SEMESTER-II/ai-ethics-legal-rag/backend/app/rag/: __init__.py  pipeline.py  prompts.py  retriever.py
SEMESTER-II/ai-ethics-legal-rag/backend/app/rules/: __init__.py  engine.py  rules.yaml
SEMESTER-II/ai-ethics-legal-rag/backend/app/tests/: test_rule_engine.py
SEMESTER-II/ai-ethics-legal-rag/backend/scripts/: ingest_all.py
SEMESTER-II/algorithmic-fairness-analysis/: README.md  algorithmic-fairness-analysis.ipynb  (+1 more)
(+55 files in other folders)
