[project]
name = "yzm714-rag-backend"
version = "0.1.0"
description = "Sağlık YZ Etik ve Hukuki Değerlendirme — Kural Bazlı RAG-LLM Backend"
authors = [{ name = "Elif Duymaz Yılmaz" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Academic Use Only" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "chromadb>=0.5.20",
    "sentence-transformers>=3.3.0",
    "rank-bm25>=0.2.2",
    "pypdf>=5.1.0",
    "pyyaml>=6.0.2",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.17",
    "tenacity>=9.0.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
